# medharmony-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
data/synthetic_patients/: README.md
data/templates/: clinician_brief.md.j2  patient_brief.md.j2
docs/: prompt_opinion_integration.md  sample_brief.md
scripts/: demo.sh  deploy_check.sh  load_synthea_patients.py  seed_demo_data.py  start.sh  test.sh
src/agent/: agent_card.py  config.py  handler.py  server.py
src/core/: agent_loop.py  brief_templates.py  llm_client.py  mcp_tool_bridge.py  reconciliation.py  safety_guards.py
src/mcp_servers/clinical_guidelines_server/: server.py
src/mcp_servers/drug_interaction_server/: server.py
src/mcp_servers/fhir_server/: server.py
src/models/: medication.py
src/utils/: audit_log.py  fhir_client.py  observability.py  sharp_context.py
tests/: test_brief_template.py  test_core.py  test_real_fhir.py  test_safety_guards.py
