[project]
name = "medharmony-agent"
version = "1.0.0"
description = "Intelligent Medication Reconciliation & Safety Agent for Healthcare"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
